# constitutional-os-langchain

./: .env.example  README.md  requirements.txt
care_v0.2.0_release/care/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
care_v0.2.0_release/care/.github/workflows/: ci.yml
care_v0.2.0_release/care/care/: __init__.py  config.py
care_v0.2.0_release/care/care/adapters/: __init__.py  aws_iam.py  constitutional_os.py  k8s.py
care_v0.2.0_release/care/care/api/: __init__.py  schemas.py  server.py
care_v0.2.0_release/care/care/membranes/: __init__.py  deltas.py  lockdown.py  policies.py
care_v0.2.0_release/care/care/models/: __init__.py  curvature.py  recommend.py  ridge.py  risk_potential.py  state_encoder.py
care_v0.2.0_release/care/care/security/: __init__.py  audit_log.py  canary.py  input_validator.py  rate_limiter.py
care_v0.2.0_release/care/care/viz/: __init__.py  plots.py
care_v0.2.0_release/care/examples/configs/: demo_config.yaml
care_v0.2.0_release/care/examples/iam_demo/: iam_state.json  notebook.ipynb  notebook_executed.ipynb  run_demo.py
care_v0.2.0_release/care/tests/: test_pipeline.py
constitutional-os-langchain/: README.md  pyproject.toml
constitutional-os-langchain/constitutional_langchain/: client.py  tool.py
constitutional-os-langchain/constitutional_langchain/integrations/: README.md  types.py
constitutional-os-langchain/constitutional_langchain/integrations/anthropic/: assistant.py  example.py
constitutional-os-langchain/constitutional_langchain/integrations/autogen/: example.py  middleware.py
constitutional-os-langchain/constitutional_langchain/integrations/openai/: assistant.py  example.py
constitutional-os-langchain/constitutional_langchain/integrations/vercel/: agent.py  example.py
constitutional-os-langchain/examples/: basic_agent.py
examples/: simple_agent.py  unsafe_demo.py
files2222/: section7_numbers_calibrated.json  threats_updated.json
files2222/mythos-standard-v1/mythos-standard/: README.md
files2222/mythos-standard-v1/mythos-standard/compliance/: checklist.json
files2222/mythos-standard-v1/mythos-standard/diagrams/: mythos_stack.md
files2222/mythos-standard-v1/mythos-standard/examples/: README.md
files2222/mythos-standard-v1/mythos-standard/standard/: mythos_standard_v1.docx  mythos_standard_v1.tex
files44444/: mythos_containment_architecture.docx
files4454554/: fig6_integration.md
governed/: client.py  config.py  tool.py
