[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "constitutional-os-langchain"
version     = "0.1.0"
description = "Constitutional OS governance for LangChain agents"
readme      = "README.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.10"

keywords = [
    "langchain", "ai-safety", "governance", "constitutional-ai",
    "membranes", "reversible", "audit"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28",
    "langchain-core>=0.1",
]

[project.optional-dependencies]
dev = ["pytest", "langchain", "langchain-openai"]

[project.urls]
Homepage   = "https://github.com/zetta55byte/constitutional-os-langchain"
Repository = "https://github.com/zetta55byte/constitutional-os-langchain"
"Constitutional OS" = "https://github.com/zetta55byte/constitutional-os"

[tool.setuptools.packages.find]
where = ["."]
include = ["constitutional_langchain*"]
